# codepipeline-slack

./: .gitignore  Cargo.toml  README.md
docs/diagrams.graffle/: data.plist  image1.tiff
src/: handler.rs  main.rs  slack.rs
terraform/: main.tf  variable.tf
