[package]
name = "codepipeline-slack"
version = "0.1.0"
authors = ["Akira Ueda <ue@gol.com>"]
edition = "2018"

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
lambda_runtime = "^0.2"
failure = "^0.1"
simple_logger = "^1"
simple-error = "^0.1"
rusoto_core = "0.40.0"
rusoto_ssm = "0.40.0"
reqwest = "0.9.19"
